@@ -8,6 +8,8 @@ Trunk (unreleased changes)
     HADOOP-2045.  Change committer list on website to a table, so that
     folks can list their organization, timezone, etc.  (cutting)
 
+    HADOOP-2058.  Facilitate creating new datanodes dynamically in
+    MiniDFSCluster. (Hairong Kuang via dhruba)
 
 Branch 0.15 (unreleased changes)
 
